tests/paczka1/fuzzy1/67205834.err
Error in line 9: KbYBm4V A670 534,6
Error in line 19: lYSf S904 86,4
Error in line 29: lYSf A670 22,5
Error in line 33: S904 A670 67,2
Error in line 38: S904 S904 95,2
